RESOLVED FIXED22222
selectKeyViewPrecedingView: with document view that can't be first responder makes WebFrameView be first responder
https://bugs.webkit.org/show_bug.cgi?id=22222
Summary selectKeyViewPrecedingView: with document view that can't be first responder ...
Darin Adler
Reported 2008-11-12 16:42:29 PST
This came up while doing some Safari experimentation; it doesn't currently affect Safari. Calling -[NSWindow selectKeyViewPrecedingView:] was causing the WebFrameView to become the first responder. I tracked it down to a bug in -[WebFrameView becomeFirstResponder] that is easy to fix.
Attachments
patch (3.61 KB, patch)
2008-11-12 16:56 PST, Darin Adler
mrowe: review+
Darin Adler
Comment 1 2008-11-12 16:56:21 PST
Mark Rowe (bdash)
Comment 2 2008-11-12 22:23:16 PST
Comment on attachment 25107 [details] patch > + // If we couldn't find a previous valid key view, ask the WebView. This handles frameset > + // cases like. Note that previousValidKeyView should never be self but can be due to > + // AppKit oddness. The second sentence of this comment has lost the Radar number. r=me
Darin Adler
Comment 3 2008-11-15 10:06:28 PST
Note You need to log in before you can comment on or make changes to this bug.